--- a/maven-settings-builder/pom.xml
+++ b/maven-settings-builder/pom.xml
@@ -54,6 +54,11 @@ under the License.
       <groupId>org.sonatype.plexus</groupId>
       <artifactId>plexus-sec-dispatcher</artifactId>
     </dependency>
+    <dependency>
+    	<groupId>org.apache.maven</groupId>
+    	<artifactId>maven-security</artifactId>
+    	<version>3.1-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
