--- a/pom.xml
+++ b/pom.xml
@@ -77,8 +77,8 @@
     <module>maven-repository-metadata</module>
     <module>maven-embedder</module>
     <module>maven-compat</module>
-    <module>apache-maven</module>
     <module>maven-security</module>
+    <module>apache-maven</module>
   </modules>
 
   <scm>
@@ -160,6 +160,11 @@
       <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-repository-metadata</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.maven</groupId>
+        <artifactId>maven-security</artifactId>
         <version>${project.version}</version>
       </dependency>
       <!--bootstrap-end-comment-->
