--- a/maven-core/pom.xml
+++ b/maven-core/pom.xml
@@ -59,6 +59,10 @@
       <artifactId>maven-aether-provider</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-security</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.sonatype.aether</groupId>
       <artifactId>aether-impl</artifactId>
     </dependency>
