--- a/maven-security/pom.xml
+++ b/maven-security/pom.xml
@@ -19,7 +19,8 @@ specific language governing permissions and limitations
 under the License.
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -34,14 +35,13 @@ under the License.
   <description>Maven Crypto component.</description>
 
   <dependencies>
-   <!-- Plexus -->
     <dependency>
-    	<groupId>org.sonatype.plexus</groupId>
-    	<artifactId>plexus-sec-dispatcher</artifactId>
+      <groupId>org.sonatype.plexus</groupId>
+      <artifactId>plexus-sec-dispatcher</artifactId>
     </dependency>
     <dependency>
-    	<groupId>org.sonatype.plexus</groupId>
-    	<artifactId>plexus-cipher</artifactId>
+      <groupId>org.sonatype.plexus</groupId>
+      <artifactId>plexus-cipher</artifactId>
     </dependency>
     <dependency>
       <groupId>org.sonatype.sisu</groupId>
@@ -56,28 +56,4 @@ under the License.
       <artifactId>plexus-component-annotations</artifactId>
     </dependency>
   </dependencies>
-  
-  <build>
-    <plugins>
-  		<plugin>
-  			<!-- Generates a Plexus components.xml component descriptor file -->
-	        <groupId>org.codehaus.plexus</groupId>
-	        <artifactId>plexus-component-metadata</artifactId>
-        	<executions>
-          		<execution>
-            		<id>process-classes</id>
-            		<goals>
-              			<goal>generate-metadata</goal>
-            		</goals>
-          		</execution>
-          		<execution>
-            		<id>process-test-classes</id>
-            		<goals>
-              			<goal>generate-test-metadata</goal>
-            		</goals>
-          		</execution>
-        	</executions>  		
-  		</plugin>
-    </plugins>
-  </build>
 </project>
