Re-added plexus-component-metadata binding removed by mistake in 572d21acaf
Signed-off-by: Anders Hammar <anders@hammar.net>

--- a/maven-security/pom.xml
+++ b/maven-security/pom.xml
@@ -56,4 +56,13 @@ under the License.
       <artifactId>plexus-component-annotations</artifactId>
     </dependency>
   </dependencies>
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.plexus</groupId>
+        <artifactId>plexus-component-metadata</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
